# rules_ciq

./: BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  defs.bzl  local_ciq.bzl  macros.bzl  product_data_api.bzl
device/: BUILD.bazel  defs.bzl  interpret_profiling_log.rs  lib.rs
local_repositories/: README.md
local_repositories/osx_homebrew/: BUILD.bazel
metrics/: BUILD.bazel  calculate_screen_ppi.rs  defs.bzl  get_product_id.rs
mtp/: BUILD.bazel  download.rs  lib.rs  upload.rs
samples/: BUILD.bazel  defs.bzl  dummy_developer_key.der  strings.xml
samples/all_rules/: BUILD.bazel  app.mc  tests.mc
samples/custom_font/: BUILD  BUILD.bazel  app.mc
samples/device_parametrics/: BUILD.bazel  app.mc  helpers.bzl
samples/hello_world/: BUILD.bazel  app.mc  strings.xml
samples/physical_device/: BUILD.bazel
samples/screen_ppi/: BUILD  BUILD.bazel  app.mc
samples/simulator/: BUILD.bazel
samples/store/: BUILD.bazel
simulator/: BUILD.bazel  defs.bzl  lib.rs  simulate.rs  test.rs
stardoc/: BUILD.bazel  defs.md  macros.md  update.sh
stardoc/templates/: BUILD.bazel  func.vm  rule.vm
store/: BUILD.bazel  defs.bzl  extract_field.rs  frame_screenshot.rs
tools/: BUILD.bazel  compose_store_image.rs  frame_screenshot.rs  get_application_id.rs  measure_cft.rs  scale_image.rs
