"""
Defines targets for running applications in the Connect IQ Simulator.
"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

package(default_visibility = ["//visibility:public"])

exports_files(["defs.bzl"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//build:defs",
        "@local_ciq//sdk:defs",
        "@bazel_skylib//lib:paths",
    ],
)

rust_library(
    name = "lib",
    srcs = ["lib.rs"],
    deps = [
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:regex",
        "@crates//:tokio",
    ],
)

rust_binary(
    name = "simulate",
    srcs = ["simulate.rs"],
    deps = [":lib"],
)

rust_binary(
    name = "test",
    srcs = ["test.rs"],
    deps = [":lib"],
)
