"""Demonstrates the use of build tools to generate device-specific resources.

Portrait rectangular screen demo:
`bazel run @rules_ciq//samples/device_parametrics:sample_edge820_debug_simulation`

Landscape rectangular screen demo:
`bazel run @rules_ciq//samples/device_parametrics:sample_epix_debug_simulation`
"""

load(
    "@rules_ciq//:defs.bzl",
    "ciq_jungle",
    "ciq_manifest",
    "ciq_project",
    "ciq_scaled_drawable_jungle",
    "devices",
    "supports_app_type",
)
load("@rules_ciq//:macros.bzl", "ciq_device_targets_macro")
load(
    "//samples:defs.bzl",
    "LAUNCHER_ICON_DRAWABLE_RESOURCE_ID",
    "NAME_STRING_RESOURCE_ID",
)
load(":helpers.bzl", "build_font_height_scaled_symbol_jungles", "device_parameterized_source_jungle")

ciq_manifest(
    name = "sample_manifest",
    entry = "SampleApp",
    id = "513ba728-068b-49b2-9afd-d3bd68c922cb",
    launcher_icon_drawable_resource_id = LAUNCHER_ICON_DRAWABLE_RESOURCE_ID,
    min_api_level = "1.0.0",
    name_string_resource_id = NAME_STRING_RESOURCE_ID,
    type = "widget",
)

# Static project files.
ciq_jungle(
    name = "sample_jungle",
    sources = glob(["*.mc"]),
)

# Generates device-specific scaled background images, scaled to fill the screen
# (the resulting image may overflow in width or height).
ciq_scaled_drawable_jungle(
    name = "screen_filled_background",
    src = ":background.jpg",
    device_dependent_height = "//metrics:screen_height",
    device_dependent_width = "//metrics:screen_width",
    resource_id = "Background",
)

# Generates device-specific scaled label images, scaled to be 50% of the
# screen's width.
ciq_scaled_drawable_jungle(
    name = "screen_width_scaled_label",
    src = ":scaled_to_width.png",
    device_dependent_width = "//metrics:screen_width",
    percent = 50,
    resource_id = "WidthScaledLabel",
)

# Generates device-specific scaled label images, scaled to be 50% of the
# screen's height.
ciq_scaled_drawable_jungle(
    name = "screen_height_scaled_label",
    src = ":scaled_to_height.png",
    device_dependent_height = "//metrics:screen_height",
    percent = 50,
    resource_id = "HeightScaledLabel",
)

# Runs a custom generator to generate device-specific sources.
device_parameterized_source_jungle(
    name = "device_parameterized_sources",
)

# A combination of static, device-specific and helper-generataed jungles.
JUNGLES = [
    "//samples:common_files",
    "//samples:icon",
    ":sample_jungle",
    ":screen_filled_background",
    ":screen_width_scaled_label",
    ":screen_height_scaled_label",
    ":device_parameterized_sources",
] + build_font_height_scaled_symbol_jungles()

ciq_project(
    name = "sample_project",
    jungles = JUNGLES,
    manifest = ":sample_manifest",
)

DEVICE_IDS_SUPPORTING_WIDGET = [
    device_id
    for device_id in devices
    if supports_app_type(device_id, "widget")
]

ciq_device_targets_macro(
    name = "sample",
    device_ids = DEVICE_IDS_SUPPORTING_WIDGET,
    project = ":sample_project",
)
