"""Demonstrates how to work with a physically connected device.

To explore this sample, first:
1. Connect your physical device using a USB cable.
2. Update the DEVICE_ID below to match your device type.

Upload a prg to a physical connected device using:
`bazel run @rules_ciq//samples/physical_device:hello_world_device_upload`

View the log file from a connected physical device using:
`bazel run @rules_ciq//samples/physical_device:hello_world_device_log_cat`
"""

load(
    "@rules_ciq//:defs.bzl",
    "ciq_device_build",
    "ciq_device_log_cat",
    "ciq_device_upload",
)

# Change this to build for a specific physical device:
DEVICE_ID = "fenix6"

# `bazel build` this target to build a project for a specific device.
# The outputs will be written into the bazel-bin directory.
ciq_device_build(
    name = "hello_world_device_build",
    device_id = DEVICE_ID,
    project = "//samples/hello_world:project",
)

# `bazel run` this target to upload the .prg to a connected physical device.
ciq_device_upload(
    name = "hello_world_device_upload",
    device_build = ":hello_world_device_build",
)

# `bazel run` this target to view the app log from a connected physical device.
# You should see output after running the sample on a device (i.e. first place
# the field in an activity).
ciq_device_log_cat(
    name = "hello_world_device_log_cat",
    device_build = ":hello_world_device_build",
)