"""Demonstrates how to to scale based on screen PPI.

Assuming a "fenix6" device:

Simulate:
`bazel run @rules_ciq//samples/screen_ppi:sample_fenix6_debug_simulation`
"""

load(
    "@rules_ciq//:defs.bzl",
    "ciq_jungle",
    "ciq_manifest",
    "ciq_project",
    "ciq_scaled_drawable_jungle",
    "devices",
    "supports_app_type",
)
load("@rules_ciq//:macros.bzl", "ciq_device_targets_macro")
load(
    "//samples:defs.bzl",
    "LAUNCHER_ICON_DRAWABLE_RESOURCE_ID",
    "NAME_STRING_RESOURCE_ID",
)

ciq_manifest(
    name = "sample_manifest",
    entry = "SampleApp",
    id = "db85a4ab-b29c-46dc-b2ca-4a9551d702d6",
    launcher_icon_drawable_resource_id = LAUNCHER_ICON_DRAWABLE_RESOURCE_ID,
    min_api_level = "1.0.0",
    name_string_resource_id = NAME_STRING_RESOURCE_ID,
    type = "widget",
)

ciq_jungle(
    name = "sample_jungle",
    sources = glob(["*.mc"]),
)

# Create a drawable scaled to 1 inch in width on each device.
ciq_scaled_drawable_jungle(
    name = "inch_jungle",
    src = "inch.png",
    device_dependent_width = "//metrics:screen_ppi",
    percent = 100,
    resource_id = "Inch",
)

ciq_project(
    name = "sample_project",
    jungles = [
        "//samples:common_files",
        "//samples:icon",
        ":sample_jungle",
        ":inch_jungle",
    ],
    manifest = ":sample_manifest",
)

DEVICE_IDS_SUPPORTING_WIDGET = [
    device_id
    for device_id in devices
    if supports_app_type(device_id, "widget")
]

ciq_device_targets_macro(
    name = "sample",
    device_ids = DEVICE_IDS_SUPPORTING_WIDGET,
    project = ":sample_project",
)
