"""Demonstrates how to work with the device simulator.

Run an interactive simulation using:
`bazel run @rules_ciq//samples/simulator:hello_world_simulation`

Run unit tests using:
`bazel test @rules_ciq//samples/simulator:hello_world_test`
"""

load(
    "@rules_ciq//:defs.bzl",
    "ciq_device_build",
    "ciq_simulation",
    "ciq_test",
)

# Change this to build for a specific simulated device:
DEVICE_ID = "fenix6"

# `bazel build` this target to build the project.
# The outputs will be written into the bazel-bin directory.
ciq_device_build(
    name = "hello_world_device_build",
    device_id = DEVICE_ID,
    include_tests = True,
    project = "@rules_ciq//samples/hello_world:project",
)

# `bazel run` this target to launch the simulator.
# Or use `ibazel run` to automatically rebuild and re-run.
ciq_simulation(
    name = "hello_world_simulation",
    device_build = ":hello_world_device_build",
)

# `bazel test` this target to run the unit tests.
# Or use `ibazel run` to automatically rebuild and re-run.
# Add the --test_output=streamed flag to also log output to the console.
ciq_test(
    name = "hello_world_test",
    timeout = "short",
    device_build = ":hello_world_device_build",
)